--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@ code {
   max-width: 720px;
   margin: 0 auto;
   padding: 10px 20px 1px 20px;
-  border: 1px solid #000000;
   border-radius: 5px;
   background-color: #fff;
   margin-left: 10px;
@@ -208,6 +207,15 @@ table:nth-of-type(2) thead th:nth-child(4) {
   font-size: 12px;
 }
 
+@media print {
+  @page {
+    margin: 0;
+  }
+
+  .body {
+    margin: 0;
+  }
+}
 
 
 .style {
