--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ code {
 }
 
 
+
+
+
+
 .container {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -22,12 +26,15 @@ code {
   padding: 10px 20px 1px 20px;
   border-radius: 5px;
   background-color: #fff;
-  margin-left: 10px;
-  margin-right: 10px;
   height: auto; 
+  width: 120vw;
+ box-sizing: border-box;
+
+ 
 }
 .content {
   max-width: 720px;
+  
   margin: 0 auto;
   padding: 10px 20px 1px 20px;
   border: 1px solid #000000;
@@ -35,7 +42,7 @@ code {
   background-color: #fff;
   margin-left: 10px;
   margin-right: 10px;
-  min-height: 750px; /* Set the height to match A4 paper height in pixels */
+  min-height: 800px; /* Set the height to match A4 paper height in pixels */
   height: auto;
 }
 
@@ -43,7 +50,7 @@ code {
   height: 100%;
   position: absolute;
   display: block; 
-  width: 60%;
+  width: 50%;
   opacity: 0.7;
   text-align: center;
   display: flex;
@@ -67,6 +74,7 @@ code {
   display: flex;
   justify-content: space-between;
   align-items: center;
+ 
 }
 
 
@@ -74,6 +82,13 @@ code {
 .d-flex{
   display: flex;
   justify-content: start;
+  align-items: center;
+}
+
+
+.d-flex2{
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -236,10 +251,12 @@ table:nth-of-type(2) thead th:nth-child(4) {
 }
 
 
+
 .style {
   text-align: center; 
   font-weight: bold; 
   font-size: 16px;
+  
 }
 
 
@@ -278,4 +295,63 @@ table:nth-of-type(2) thead th:nth-child(4) {
 
 .border-less{
   border: none;
+}
+
+
+@media (max-width: 799px) {
+  #background{
+    width: 85%;
+    margin-top: -20%;
+  }
+}
+
+@media (max-width: 699px) {
+
+
+  .container{
+    width: 160%;
+    margin: 0;
+    
+  }
+
+  .content{
+    width: 90%;
+  }
+  .style{
+    font-size: 10px;
+  }
+
+
+  #background{
+    width: 150%;
+    margin-top: -10%;
+  }
+
+  .comAddress {
+    font-size: 8px;
+    width: 70%;
+   }
+
+   .logo img {
+    height: 40px;
+    width: 40px;
+    margin-right: 15px;
+  }
+   
+
+  .qr{
+    width: 55px;
+    height: 55px;
+    margin-top: -10px;
+    
+  }
+
+
+  .alignleft,.alignright,.line-text,.disfont{
+    font-size: 8px;
+  }
+
+  .left,.right,.s5-part1{
+    font-size: 10px;
+  } 
 }
